tests/gen/testdata/configs/fail/region_missing_region_short_name.jsonnet
// explicit region requires matching region_short_name
{
  region: 'us-phoenix-1',
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      shared_project_network: { network: { vcn: '10.0.64.0/21' } },
      projects: { proj1: {} },
    },
  },
}
